Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81852

rhi: Depth clip (clipping based on distance) is inconsistent in D3D vs. the others

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15
    • 5.15
    • Qt RHI
    • None

      DepthClipEnable in https://docs.microsoft.com/en-us/windows/win32/api/d3d11/ns-d3d11-d3d11_rasterizer_desc should have been set to TRUE. This would match other backends. Currently it is zeroed out, so it is FALSE.

      Metal defaults to MTLDepthClipMode.clip, while Vulkan has depth clip enabled unless VkPipelineRasterizationDepthClipStateCreateInfoEXT is used to control it (we do not use it).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes