rhi: d3d: Make DepthClipEnable set to true

...which is the natural default, and matches other backends.

Task-number: QTBUG-81852
Change-Id: I6d0788b18eb7601661ef646e650114a503a12215
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>